// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 1`] = `
"+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+   +---+---+---+
| [91m3[39m | [96m0[39m   [96m0[39m | [95m1[39m |
+---+---+   +   +
| [96m0[39m | [35m4[39m | [96m0[39m | [95m1[39m |
+   +   +---+   +
| [96m0[39m | [35m4[39m | [31m5[39m | [95m1[39m |
+---+   +   +   +
| [95m1[39m | [35m4[39m | [31m5[39m | [95m1[39m |
+   +---+   +---+
| [95m1[39m | [31m5[39m   [31m5[39m   [31m5[39m |
+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m | [35m4[39m |
+---+---+---+---+

room 0 size=5 cells=5,6,8,10,12
room 1 size=6 cells=7,11,15,16,19,20
room 2 size=3 cells=24,25,26
room 3 size=5 cells=0,1,2,3,4
room 4 size=4 cells=9,13,17,27
room 5 size=5 cells=14,18,21,22,23"
`;

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 2`] = `
"+---+---+---+---+
| 3   3   3   3 |
+   +---+---+---+
| 3 | 0   0 | 1 |
+---+---+   +   +
| 0 | 4 | 0 | 1 |
+   +   +---+   +
| 0 | 4 | 5 | 1 |
+---+   +   +   +
| 1 | 4 | 5 | 1 |
+   +---+   +---+
| 1 | 5   5   5 |
+---+---+---+---+
| 2   2   2 | 4 |
+---+---+---+---+

room 0 size=5 cells=5,6,8,10,12
room 1 size=6 cells=7,11,15,16,19,20
room 2 size=3 cells=24,25,26
room 3 size=5 cells=0,1,2,3,4
room 4 size=4 cells=9,13,17,27
room 5 size=5 cells=14,18,21,22,23"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+   +   +   +   +---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m |
+---+   +   +   +   +
| [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m |
+   +   +---+---+   +
| [96m0[39m | [95m1[39m | [96m0[39m   [96m0[39m   [96m0[39m |
+   +---+   +   +   +
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+---+---+---+

room 0 size=12 cells=9,10,14,15,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,11,12,13,16"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1   1   1 |
+   +   +   +   +---+
| 1   1   1   1 | 0 |
+---+   +   +   +   +
| 0 | 1   1   1 | 0 |
+   +   +---+---+   +
| 0 | 1 | 0   0   0 |
+   +---+   +   +   +
| 0   0   0   0   0 |
+---+---+---+---+---+

room 0 size=12 cells=9,10,14,15,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,11,12,13,16"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+   +   +   +   +---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [96m0[39m |
+---+---+---+---+   +
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m |
+---+---+---+   +   +
| [96m0[39m   [96m0[39m   [96m0[39m | [95m1[39m | [96m0[39m |
+   +---+---+   +---+
| [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+---+---+---+

room 0 size=7 cells=9,14,15,16,17,19,20
room 1 size=9 cells=10,11,12,13,18,21,22,23,24
room 2 size=9 cells=0,1,2,3,4,5,6,7,8"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 2   2   2   2   2 |
+   +   +   +   +---+
| 2   2   2   2 | 0 |
+---+---+---+---+   +
| 1   1   1   1 | 0 |
+---+---+---+   +   +
| 0   0   0 | 1 | 0 |
+   +---+---+   +---+
| 0 | 1   1   1   1 |
+---+---+---+---+---+

room 0 size=7 cells=9,14,15,16,17,19,20
room 1 size=9 cells=10,11,12,13,18,21,22,23,24
room 2 size=9 cells=0,1,2,3,4,5,6,7,8"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m | [91m3[39m   [91m3[39m |
+   +   +---+   +   +
| [95m1[39m   [95m1[39m | [96m0[39m | [91m3[39m   [91m3[39m |
+---+---+   +---+---+
| [91m3[39m   [91m3[39m | [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+   +   +---+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m | [92m2[39m |
+---+---+---+---+   +
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+

room 0 size=8 cells=7,12,13,14,15,16,17,18
room 1 size=5 cells=0,1,2,5,6
room 2 size=6 cells=19,20,21,22,23,24
room 3 size=6 cells=3,4,8,9,10,11"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1 | 3   3 |
+   +   +---+   +   +
| 1   1 | 0 | 3   3 |
+---+---+   +---+---+
| 3   3 | 0   0   0 |
+---+---+   +   +---+
| 0   0   0   0 | 2 |
+---+---+---+---+   +
| 2   2   2   2   2 |
+---+---+---+---+---+

room 0 size=8 cells=7,12,13,14,15,16,17,18
room 1 size=5 cells=0,1,2,5,6
room 2 size=6 cells=19,20,21,22,23,24
room 3 size=6 cells=3,4,8,9,10,11"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [96m0[39m   [96m0[39m   [96m0[39m | [92m2[39m |
+   +   +   +   +   +   +   +---+   +---+   +---+
| [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [95m1[39m | [96m0[39m | [92m2[39m | [96m0[39m | [95m1[39m |
+   +   +   +   +   +   +   +   +   +---+   +   +
| [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [95m1[39m | [96m0[39m | [95m1[39m | [96m0[39m | [95m1[39m |
+   +---+   +   +   +   +   +   +   +   +   +---+
| [96m0[39m | [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [95m1[39m | [96m0[39m | [95m1[39m | [96m0[39m | [91m3[39m |
+---+---+   +---+---+   +---+---+   +---+   +   +
| [91m3[39m | [92m2[39m   [92m2[39m | [96m0[39m | [95m1[39m | [92m2[39m | [91m3[39m | [96m0[39m   [96m0[39m | [91m3[39m | [96m0[39m | [91m3[39m |
+   +---+---+   +   +---+---+   +   +   +   +   +
| [91m3[39m | [95m1[39m | [96m0[39m   [96m0[39m | [95m1[39m | [96m0[39m | [95m1[39m | [96m0[39m   [96m0[39m | [91m3[39m | [96m0[39m | [91m3[39m |
+   +   +   +   +   +   +   +---+   +   +   +   +
| [91m3[39m | [95m1[39m | [96m0[39m   [96m0[39m | [95m1[39m | [96m0[39m | [95m1[39m | [92m2[39m | [96m0[39m | [91m3[39m | [96m0[39m | [91m3[39m |
+   +   +   +   +   +   +   +   +   +   +   +   +
| [91m3[39m | [95m1[39m | [96m0[39m   [96m0[39m | [95m1[39m | [96m0[39m | [95m1[39m | [92m2[39m | [96m0[39m | [91m3[39m | [96m0[39m | [91m3[39m |
+   +   +   +   +---+---+   +   +---+---+---+   +
| [91m3[39m | [95m1[39m | [96m0[39m   [96m0[39m | [91m3[39m | [95m1[39m   [95m1[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [91m3[39m |
+   +   +---+---+   +   +   +---+---+---+---+   +
| [91m3[39m | [95m1[39m   [95m1[39m   [95m1[39m | [91m3[39m | [95m1[39m   [95m1[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+   +   +---+   +   +   +   +   +---+   +   +   +
| [91m3[39m | [95m1[39m | [91m3[39m | [95m1[39m | [91m3[39m | [95m1[39m   [95m1[39m | [91m3[39m | [95m1[39m | [91m3[39m   [91m3[39m   [91m3[39m |
+   +   +   +   +   +   +   +   +   +   +   +---+
| [91m3[39m | [95m1[39m | [91m3[39m | [95m1[39m | [91m3[39m | [95m1[39m   [95m1[39m | [91m3[39m | [95m1[39m | [91m3[39m   [91m3[39m | [95m1[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=35 cells=0,8,9,10,12,20,22,24,32,34,36,44,46,51,55,56,58,62,63,65,67,68,70,74,75,77,80,82,86,87,89,92,94,98,99
room 1 size=37 cells=19,23,31,33,35,37,43,45,52,61,64,66,73,76,78,85,88,90,97,101,102,109,110,111,113,114,121,123,125,126,128,133,135,137,138,140,143
room 2 size=35 cells=1,2,3,4,5,6,7,11,13,14,15,16,17,18,21,25,26,27,28,29,30,38,39,40,41,42,49,50,53,79,91,103,104,105,106
room 3 size=37 cells=47,48,54,57,59,60,69,71,72,81,83,84,93,95,96,100,107,108,112,115,116,117,118,119,120,122,124,127,129,130,131,132,134,136,139,141,142"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 0 | 2   2   2   2   2   2   2 | 0   0   0 | 2 |
+   +   +   +   +   +   +   +---+   +---+   +---+
| 0 | 2   2   2   2   2   2 | 1 | 0 | 2 | 0 | 1 |
+   +   +   +   +   +   +   +   +   +---+   +   +
| 0 | 2   2   2   2   2   2 | 1 | 0 | 1 | 0 | 1 |
+   +---+   +   +   +   +   +   +   +   +   +---+
| 0 | 1 | 2   2   2   2   2 | 1 | 0 | 1 | 0 | 3 |
+---+---+   +---+---+   +---+---+   +---+   +   +
| 3 | 2   2 | 0 | 1 | 2 | 3 | 0   0 | 3 | 0 | 3 |
+   +---+---+   +   +---+---+   +   +   +   +   +
| 3 | 1 | 0   0 | 1 | 0 | 1 | 0   0 | 3 | 0 | 3 |
+   +   +   +   +   +   +   +---+   +   +   +   +
| 3 | 1 | 0   0 | 1 | 0 | 1 | 2 | 0 | 3 | 0 | 3 |
+   +   +   +   +   +   +   +   +   +   +   +   +
| 3 | 1 | 0   0 | 1 | 0 | 1 | 2 | 0 | 3 | 0 | 3 |
+   +   +   +   +---+---+   +   +---+---+---+   +
| 3 | 1 | 0   0 | 3 | 1   1 | 2   2   2   2 | 3 |
+   +   +---+---+   +   +   +---+---+---+---+   +
| 3 | 1   1   1 | 3 | 1   1 | 3   3   3   3   3 |
+   +   +---+   +   +   +   +   +---+   +   +   +
| 3 | 1 | 3 | 1 | 3 | 1   1 | 3 | 1 | 3   3   3 |
+   +   +   +   +   +   +   +   +   +   +   +---+
| 3 | 1 | 3 | 1 | 3 | 1   1 | 3 | 1 | 3   3 | 1 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=35 cells=0,8,9,10,12,20,22,24,32,34,36,44,46,51,55,56,58,62,63,65,67,68,70,74,75,77,80,82,86,87,89,92,94,98,99
room 1 size=37 cells=19,23,31,33,35,37,43,45,52,61,64,66,73,76,78,85,88,90,97,101,102,109,110,111,113,114,121,123,125,126,128,133,135,137,138,140,143
room 2 size=35 cells=1,2,3,4,5,6,7,11,13,14,15,16,17,18,21,25,26,27,28,29,30,38,39,40,41,42,49,50,53,79,91,103,104,105,106
room 3 size=37 cells=47,48,54,57,59,60,69,71,72,81,83,84,93,95,96,100,107,108,112,115,116,117,118,119,120,122,124,127,129,130,131,132,134,136,139,141,142"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [95m1[39m | [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [35m4[39m | [96m0[39m | [34m7[39m |
+   +   +   +   +   +   +   +   +   +   +   +---+
| [95m1[39m | [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [35m4[39m | [96m0[39m | [95m1[39m |
+   +---+   +---+---+---+---+---+---+   +   +   +
| [95m1[39m | [92m2[39m | [34m7[39m | [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [35m4[39m | [91m3[39m | [35m4[39m | [96m0[39m | [95m1[39m |
+---+   +---+   +   +   +---+   +   +   +---+---+
| [31m5[39m | [92m2[39m   [92m2[39m | [31m5[39m   [31m5[39m   [31m5[39m | [35m4[39m   [35m4[39m | [91m3[39m | [35m4[39m | [95m1[39m | [96m0[39m |
+   +   +   +   +   +   +   +   +---+   +   +   +
| [31m5[39m | [92m2[39m   [92m2[39m | [31m5[39m   [31m5[39m   [31m5[39m | [35m4[39m   [35m4[39m | [96m0[39m | [35m4[39m | [95m1[39m | [96m0[39m |
+   +   +   +   +---+   +   +   +   +   +   +   +
| [31m5[39m | [92m2[39m   [92m2[39m | [31m5[39m | [93m6[39m | [31m5[39m | [35m4[39m   [35m4[39m | [96m0[39m | [35m4[39m | [95m1[39m | [96m0[39m |
+   +---+   +   +   +---+   +---+   +   +   +---+
| [31m5[39m | [93m6[39m | [92m2[39m | [31m5[39m | [93m6[39m | [92m2[39m | [35m4[39m | [92m2[39m | [96m0[39m | [35m4[39m | [95m1[39m   [95m1[39m |
+---+   +---+---+   +---+---+   +   +---+---+   +
| [96m0[39m | [93m6[39m | [35m4[39m   [35m4[39m | [93m6[39m | [96m0[39m   [96m0[39m | [92m2[39m | [96m0[39m | [93m6[39m | [92m2[39m | [95m1[39m |
+   +---+---+---+   +   +   +   +   +   +   +   +
| [96m0[39m | [95m1[39m | [93m6[39m   [93m6[39m   [93m6[39m | [96m0[39m   [96m0[39m | [92m2[39m | [96m0[39m | [93m6[39m | [92m2[39m | [95m1[39m |
+---+   +---+   +   +---+---+   +---+   +---+---+
| [91m3[39m | [95m1[39m | [92m2[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m   [92m2[39m | [93m6[39m | [95m1[39m | [93m6[39m |
+   +   +   +---+   +   +   +   +   +   +   +---+
| [91m3[39m | [95m1[39m | [92m2[39m | [95m1[39m | [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m   [92m2[39m | [93m6[39m | [95m1[39m | [91m3[39m |
+   +---+---+---+---+---+---+---+---+---+---+   +
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=17 cells=10,22,34,47,56,59,68,71,80,84,89,90,92,96,101,102,104
room 1 size=18 cells=0,12,23,24,35,46,58,70,82,83,95,97,107,109,118,121,123,130
room 2 size=20 cells=25,37,38,49,50,61,62,74,77,79,91,94,103,106,110,115,116,122,127,128
room 3 size=17 cells=32,44,108,120,131,132,133,134,135,136,137,138,139,140,141,142,143
room 4 size=17 cells=9,21,31,33,42,43,45,54,55,57,66,67,69,78,81,86,87
room 5 size=17 cells=27,28,29,30,36,39,40,41,48,51,52,53,60,63,65,72,75
room 6 size=20 cells=64,73,76,85,88,93,98,99,100,105,111,112,113,114,117,119,124,125,126,129
room 7 size=18 cells=1,2,3,4,5,6,7,8,11,13,14,15,16,17,18,19,20,26"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 1 | 7   7   7   7   7   7   7   7 | 4 | 0 | 7 |
+   +   +   +   +   +   +   +   +   +   +   +---+
| 1 | 7   7   7   7   7   7   7   7 | 4 | 0 | 1 |
+   +---+   +---+---+---+---+---+---+   +   +   +
| 1 | 2 | 7 | 5   5   5   5 | 4 | 3 | 4 | 0 | 1 |
+---+   +---+   +   +   +---+   +   +   +---+---+
| 5 | 2   2 | 5   5   5 | 4   4 | 3 | 4 | 1 | 0 |
+   +   +   +   +   +   +   +   +---+   +   +   +
| 5 | 2   2 | 5   5   5 | 4   4 | 0 | 4 | 1 | 0 |
+   +   +   +   +---+   +   +   +   +   +   +   +
| 5 | 2   2 | 5 | 6 | 5 | 4   4 | 0 | 4 | 1 | 0 |
+   +---+   +   +   +---+   +---+   +   +   +---+
| 5 | 6 | 2 | 5 | 6 | 2 | 4 | 2 | 0 | 4 | 1   1 |
+---+   +---+---+   +---+---+   +   +---+---+   +
| 0 | 6 | 4   4 | 6 | 0   0 | 2 | 0 | 6 | 2 | 1 |
+   +---+---+---+   +   +   +   +   +   +   +   +
| 0 | 1 | 6   6   6 | 0   0 | 2 | 0 | 6 | 2 | 1 |
+---+   +---+   +   +---+---+   +---+   +---+---+
| 3 | 1 | 2 | 6   6   6   6 | 2   2 | 6 | 1 | 6 |
+   +   +   +---+   +   +   +   +   +   +   +---+
| 3 | 1 | 2 | 1 | 6   6   6 | 2   2 | 6 | 1 | 3 |
+   +---+---+---+---+---+---+---+---+---+---+   +
| 3   3   3   3   3   3   3   3   3   3   3   3 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=17 cells=10,22,34,47,56,59,68,71,80,84,89,90,92,96,101,102,104
room 1 size=18 cells=0,12,23,24,35,46,58,70,82,83,95,97,107,109,118,121,123,130
room 2 size=20 cells=25,37,38,49,50,61,62,74,77,79,91,94,103,106,110,115,116,122,127,128
room 3 size=17 cells=32,44,108,120,131,132,133,134,135,136,137,138,139,140,141,142,143
room 4 size=17 cells=9,21,31,33,42,43,45,54,55,57,66,67,69,78,81,86,87
room 5 size=17 cells=27,28,29,30,36,39,40,41,48,51,52,53,60,63,65,72,75
room 6 size=20 cells=64,73,76,85,88,93,98,99,100,105,111,112,113,114,117,119,124,125,126,129
room 7 size=18 cells=1,2,3,4,5,6,7,8,11,13,14,15,16,17,18,19,20,26"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+   +   +   +   +   +---+---+---+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [34m7[39m | [32m8[39m | [94m9[39m   [94m9[39m | [91m3[39m   [91m3[39m   [91m3[39m |
+---+---+---+---+---+---+   +   +   +   +   +   +
| [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [95m1[39m | [96m0[39m | [32m8[39m | [94m9[39m   [94m9[39m | [91m3[39m   [91m3[39m   [91m3[39m |
+   +---+---+   +   +   +   +   +   +   +   +   +
| [34m7[39m | [93m6[39m | [32m8[39m | [34m7[39m | [95m1[39m | [96m0[39m | [32m8[39m | [94m9[39m   [94m9[39m | [91m3[39m   [91m3[39m   [91m3[39m |
+   +   +   +---+   +   +   +   +   +   +---+   +
| [34m7[39m | [93m6[39m | [32m8[39m | [35m4[39m | [95m1[39m | [96m0[39m | [32m8[39m | [94m9[39m   [94m9[39m | [91m3[39m | [95m1[39m | [91m3[39m |
+   +   +---+---+   +   +   +   +   +   +   +   +
| [34m7[39m | [93m6[39m | [34m7[39m   [34m7[39m | [95m1[39m | [96m0[39m | [32m8[39m | [94m9[39m   [94m9[39m | [91m3[39m | [95m1[39m | [91m3[39m |
+   +---+   +   +   +---+   +   +---+   +   +---+
| [34m7[39m | [96m0[39m | [34m7[39m   [34m7[39m | [95m1[39m | [34m7[39m | [32m8[39m | [94m9[39m | [96m0[39m | [91m3[39m | [95m1[39m   [95m1[39m |
+---+   +---+---+   +---+   +   +   +---+   +---+
| [95m1[39m | [96m0[39m   [96m0[39m   [96m0[39m | [95m1[39m   [95m1[39m | [32m8[39m | [94m9[39m | [96m0[39m   [96m0[39m | [95m1[39m | [31m5[39m |
+---+---+---+   +---+---+   +   +---+---+---+---+
| [31m5[39m   [31m5[39m | [94m9[39m | [96m0[39m   [96m0[39m | [32m8[39m   [32m8[39m | [94m9[39m | [35m4[39m   [35m4[39m   [35m4[39m | [93m6[39m |
+   +   +---+---+---+---+---+---+   +   +   +   +
| [31m5[39m   [31m5[39m | [35m4[39m   [35m4[39m   [35m4[39m | [31m5[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [93m6[39m |
+---+   +   +   +   +   +---+---+---+---+---+   +
| [93m6[39m | [31m5[39m | [35m4[39m   [35m4[39m   [35m4[39m | [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [32m8[39m | [93m6[39m |
+   +   +---+---+---+---+---+---+---+---+   +---+
| [93m6[39m | [31m5[39m   [31m5[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [32m8[39m   [32m8[39m   [32m8[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=13 cells=29,41,53,65,73,80,85,86,87,92,93,99,100
room 1 size=13 cells=28,40,52,58,64,70,76,82,83,84,88,89,94
room 2 size=17 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
room 3 size=14 cells=21,22,23,33,34,35,45,46,47,57,59,69,71,81
room 4 size=15 cells=51,104,105,106,110,111,112,114,115,116,117,118,122,123,124
room 5 size=14 cells=95,96,97,108,109,113,121,125,126,127,128,129,133,134
room 6 size=14 cells=37,49,61,107,119,120,131,132,135,136,137,138,139,140
room 7 size=15 cells=17,24,25,26,27,36,39,48,60,62,63,72,74,75,77
room 8 size=15 cells=18,30,38,42,50,54,66,78,90,101,102,130,141,142,143
room 9 size=14 cells=19,20,31,32,43,44,55,56,67,68,79,91,98,103"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 2   2   2   2   2   2   2   2   2   2   2   2 |
+   +   +   +   +   +---+---+---+---+---+---+---+
| 2   2   2   2   2 | 7 | 8 | 9   9 | 3   3   3 |
+---+---+---+---+---+---+   +   +   +   +   +   +
| 7   7   7   7 | 1 | 0 | 8 | 9   9 | 3   3   3 |
+   +---+---+   +   +   +   +   +   +   +   +   +
| 7 | 6 | 8 | 7 | 1 | 0 | 8 | 9   9 | 3   3   3 |
+   +   +   +---+   +   +   +   +   +   +---+   +
| 7 | 6 | 8 | 4 | 1 | 0 | 8 | 9   9 | 3 | 1 | 3 |
+   +   +---+---+   +   +   +   +   +   +   +   +
| 7 | 6 | 7   7 | 1 | 0 | 8 | 9   9 | 3 | 1 | 3 |
+   +---+   +   +   +---+   +   +---+   +   +---+
| 7 | 0 | 7   7 | 1 | 7 | 8 | 9 | 0 | 3 | 1   1 |
+---+   +---+---+   +---+   +   +   +---+   +---+
| 1 | 0   0   0 | 1   1 | 8 | 9 | 0   0 | 1 | 5 |
+---+---+---+   +---+---+   +   +---+---+---+---+
| 5   5 | 9 | 0   0 | 8   8 | 9 | 4   4   4 | 6 |
+   +   +---+---+---+---+---+---+   +   +   +   +
| 5   5 | 4   4   4 | 5 | 4   4   4   4   4 | 6 |
+---+   +   +   +   +   +---+---+---+---+---+   +
| 6 | 5 | 4   4   4 | 5   5   5   5   5 | 8 | 6 |
+   +   +---+---+---+---+---+---+---+---+   +---+
| 6 | 5   5 | 6   6   6   6   6   6 | 8   8   8 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=13 cells=29,41,53,65,73,80,85,86,87,92,93,99,100
room 1 size=13 cells=28,40,52,58,64,70,76,82,83,84,88,89,94
room 2 size=17 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16
room 3 size=14 cells=21,22,23,33,34,35,45,46,47,57,59,69,71,81
room 4 size=15 cells=51,104,105,106,110,111,112,114,115,116,117,118,122,123,124
room 5 size=14 cells=95,96,97,108,109,113,121,125,126,127,128,129,133,134
room 6 size=14 cells=37,49,61,107,119,120,131,132,135,136,137,138,139,140
room 7 size=15 cells=17,24,25,26,27,36,39,48,60,62,63,72,74,75,77
room 8 size=15 cells=18,30,38,42,50,54,66,78,90,101,102,130,141,142,143
room 9 size=14 cells=19,20,31,32,43,44,55,56,67,68,79,91,98,103"
`;
